--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         uses: codecov/codecov-action@v1 
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos 
-          files: ${{ GITHUB_WORKSPACE }}/xtext/org.icyphy.linguafranca.tests/build/reports/xml/jacoco
+          files: $GITHUB_WORKSPACE/xtext/org.icyphy.linguafranca.tests/build/reports/xml/jacoco
           # gcov_prefix: 
           # optional flags: unittests 
           # optional name: codecov-umbrella 
