--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
   c-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -116,15 +116,6 @@ jobs:
       - name: Install Dependencies OS X
         run: brew install coreutils
         if: runner.os == 'macOS'
-      - name: Setup WSL
-        uses: Vampire/setup-wsl@v1
-        if: runner.os == 'Windows'
-      - name: Install Dependencies Windows
-        shell: wsl-bash {0}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libprotobuf-dev protobuf-compiler
-        if: runner.os == 'Windows'
       - uses: actions/checkout@v2
       - name: Run C++ tests;
         run: |
@@ -159,14 +150,11 @@ jobs:
           brew install protobuf
           brew install coreutils
         if: runner.os == 'macOS'
-      - name: Setup WSL
-        uses: Vampire/setup-wsl@v1
-        if: runner.os == 'Windows'
       - name: Install Dependencies Windows
-        shell: wsl-bash {0}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libprotobuf-dev protobuf-compiler
+        uses: lukka/run-vcpkg@v4
+        with:
+          vcpkgArguments: 'protobuf'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
         if: runner.os == 'Windows'
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -186,7 +174,7 @@ jobs:
   python-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -204,14 +192,11 @@ jobs:
           brew install protobuf
           brew install coreutils
         if: runner.os == 'macOS'
-      - name: Setup WSL
-        uses: Vampire/setup-wsl@v1
-        if: runner.os == 'Windows'
       - name: Install Dependencies Windows
-        shell: wsl-bash {0}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libprotobuf-dev protobuf-compiler
+        uses: lukka/run-vcpkg@v4
+        with:
+          vcpkgArguments: 'protobuf'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
         if: runner.os == 'Windows'
       - name: Install Google API Python Client
         run: pip3 install --upgrade google-api-python-client
