--- a/org.lflang/.project
+++ b/org.lflang/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.icyphy.linguafranca</name>
+	<name>org.lflang</name>
 	<comment></comment>
 	<projects>
 	</projects>
