Small fixes. Projects still do not show up in the right place.

--- a/org.lflang.ui/.project
+++ b/org.lflang.ui/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.icyphy.linguafranca.ui</name>
+	<name>org.lflang.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
