--- a/org.lflang/plugin.xml
+++ b/org.lflang/plugin.xml
@@ -4,7 +4,7 @@
 	<extension point="org.eclipse.emf.ecore.generated_package">
 		<package 
 			uri = "https://www.lf-lang.org/"
-			class = "org.lflang.meta.MetaPackage"
+			class = "org.lflang.lf.LfPackage"
 			genModel = "model/generated/LF.genmodel" />
 	</extension>
 </plugin>
