--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 *.lft
+*.out
+*.class
 *.DS_Store
+*.xml_gen
+*.xtendbin
+*._trace
+.project/
 .gradle/
+.settings/
+**/bin/
+!./bin/
+**/build/
+**/test-bin/
+**/generated/
+**/src-gen/
+**/xtend-gen/
+**/.vscode/
