--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -6,14 +6,14 @@
   <parent>
     <relativePath>../pom.xml</relativePath>
     <groupId>org.lflang</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>lf</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.lflang</artifactId>
   <packaging>eclipse-plugin</packaging>
 
-  <name>Lingua-Franca Core</name>
+  <name>Lingua Franca Core</name>
 
 
   <build>
@@ -45,6 +45,12 @@
 	  <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
 	</configuration>
 	<dependencies>
+	  <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.4</version>
+      </dependency>
 	  <dependency>
 	    <groupId>org.eclipse.emf</groupId>
 	    <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
