--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.lflang</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>lf</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+
+  <name>Lingua Franca</name>
 
   <modules>
     <module>org.lflang</module>
@@ -22,8 +24,8 @@
   </modules>
   
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <tycho-version>1.6.0</tycho-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtext.version. -->
@@ -60,6 +62,18 @@
     <pluginManagement>
       
       <plugins>
+
+        <!-- This plugin helps finding the latest plugin or dependency versions for your modules. Open up the terminal and execute this command to find the plugin versions you have to update:
+        mvn versions:display-plugin-updates -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.5</version>
+          <configuration>
+              <generateBackupPoms>false</generateBackupPoms>
+          </configuration>
+        </plugin>
+
 	
 	<!-- xtend-maven-plugin is in pluginManagement instead of in plugins 
 	     so that it doesn't run before the exec-maven-plugin's *.mwe2 gen; this way 
@@ -83,6 +97,15 @@
 	  </configuration>
 	</plugin>
 	
+<!-- <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.0</version>
+    <configuration>
+        <release>11</release>
+    </configuration>
+</plugin> -->
+
 	<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-clean-plugin</artifactId>
