--- a/org.lflang.sdk/pom.xml
+++ b/org.lflang.sdk/pom.xml
@@ -7,7 +7,7 @@
         <relativePath>../pom.xml</relativePath>
         <groupId>org.lflang</groupId>
         <artifactId>lf</artifactId>
-        <version>0.1-alpha</version>
+        <version>0.1-alpha-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.lflang.sdk</artifactId>
