--- a/org.lflang.rca/pom.xml
+++ b/org.lflang.rca/pom.xml
@@ -8,10 +8,10 @@
 		<relativePath>../pom.xml</relativePath>
 		<groupId>org.lflang</groupId>
 		<artifactId>lf</artifactId>
-		<version>0.1-alpha-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<version>0.1-alpha-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<artifactId>org.lflang.rca</artifactId>
 	<packaging>eclipse-repository</packaging>
 	<name>Lingua Franca RCA</name>
