Added a rudimentary welcome screen with a the LF logo and link to LF wiki

--- a/org.lflang.ui/plugin.xml
+++ b/org.lflang.ui/plugin.xml
@@ -431,4 +431,11 @@
 			type="text">
 		</fileTypes>
 	</extension>
+ <extension
+       point="org.eclipse.ui.intro.configExtension">
+    <configExtension
+          configId="org.eclipse.ui.intro.universalConfig"
+          content="intro/lf-welcome.xml">
+    </configExtension>
+ </extension>
 </plugin>
