--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -87,6 +87,7 @@
                 <artifactId>xtend-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <!-- Cleanup files duplicated by Xtext. -->
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>3.0.0</version>
                 <executions>
