--- a/pom.xml
+++ b/pom.xml
@@ -204,12 +204,14 @@
                 <artifactId>target-platform-configuration</artifactId>
                 <version>${tycho-version}</version>
                 <configuration>
-                    <!-- <pomDependencies>consider</pomDependencies> -->
+                    <!-- See https://www.eclipse.org/tycho/sitedocs/target-platform-configuration/target-platform-configuration-mojo.html#pomDependencies   -->
+                    <!-- This puts the kotlin osgi bundle into the target platform. -->
+                    <pomDependencies>consider</pomDependencies>
                     <target>
                         <artifact>
                             <groupId>org.lflang</groupId>
                             <artifactId>org.lflang.targetplatform</artifactId>
-                            <version>0.1.0-SNAPSHOT</version>
+                            <version>${project.version}</version>
                         </artifact>
                     </target>     
                     <environments>
