Fix the RCA built with mvn (missing kotlin dep)

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,13 @@
 
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-osgi-bundle</artifactId>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
